@startuml

title __MODELE's Class Diagram__\n

  namespace  {
    namespace om.example.chess {
      namespace modele {
        class com.example.chess.modele.Cavalier {
            + Cavalier()
            + setMoves()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace modele {
        enum Couleur {
          BLANC
          NOIR
          name
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace modele {
        class com.example.chess.modele.Echiquier {
            {static} + axe_x : ArrayList<String>
            {static} + axe_y : ArrayList<String>
            {static} # cases : ArrayList<String>
            # nbreturn : int
            # pieces : HashMap<String, Pion>
            + Echiquier()
            {static} + checkPosition()
            + getMoves()
            + getNbreturn()
            + getPieces()
            + getPlayColor()
            + getTurnColor()
            + selectCase()
            + toString()
            # enPassant()
            # isEchec()
            # isEchecMat()
            {static} # setCases()
            - changeTurn()
            - playMove()
            - roque()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace modele {
        class com.example.chess.modele.Fou {
            + Fou()
            + setMoves()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace modele {
        class com.example.chess.modele.Pion {
            # bigMove : boolean
            # ismoved : boolean
            # moves : ArrayList<String>
            # position : String
            + Pion()
            + alreadyMoved()
            + getCouleur()
            + getMoves()
            + getPosition()
            + setMoves()
            + setPosition()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace modele {
        class com.example.chess.modele.Reine {
            + Reine()
            + setMoves()
            + toString()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace modele {
        class com.example.chess.modele.Roi {
            + Roi()
            + setMoves()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace modele {
        class com.example.chess.modele.Tour {
            + Tour()
            + setMoves()
            + toString()
        }
      }
    }
  }
  

  com.example.chess.modele.Cavalier -up-|> com.example.chess.modele.Pion
  com.example.chess.modele.Echiquier o-- com.example.chess.modele.Couleur : playColor
  com.example.chess.modele.Echiquier o-- com.example.chess.modele.Couleur : robotColor
  com.example.chess.modele.Echiquier o-- com.example.chess.modele.Pion : selectedPiece
  com.example.chess.modele.Echiquier o-- com.example.chess.modele.Couleur : turnColor
  com.example.chess.modele.Fou -up-|> com.example.chess.modele.Pion
  com.example.chess.modele.Pion o-- com.example.chess.modele.Couleur : couleur
  com.example.chess.modele.Pion o-- com.example.chess.modele.Echiquier : echiquier
  com.example.chess.modele.Reine -up-|> com.example.chess.modele.Pion
  com.example.chess.modele.Roi -up-|> com.example.chess.modele.Pion
  com.example.chess.modele.Tour -up-|> com.example.chess.modele.Pion


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
